--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ services:
   - docker
 script:
   - ./build-rootfs-from-docker.sh ${DISTRO}
+after_success:
+  - ls -lha
 deploy:
   provider: releases
   api_key:
